<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY storename "Tokmanni">
    ]>

<resources>
    <string name="app_name">&storename; Expiry System 2</string>

    <string name="nav_home_button_title">Home</string>
    <string name="nav_products_button_title">Products</string>
    <string name="nav_edit_product_button_title">Add</string>
    <string name="nav_users_button_title">Users</string>
    <string name="nav_add_user_button_title">New User</string>
    <string name="nav_edit_user_button_title">Edit User</string>
    <string name="nav_history_button_title">History</string>

    <string name="home_username_label">User Name</string>
    <string name="home_password_label">Password</string>
    <string name="home_login_button_title">Log In</string>
    <string name="home_logout_button_title">Log Out</string>

    <string name="product_add_product_name_label">Product Name</string>
    <string name="product_add_product_code_label">Product Code</string>
    <string name="product_add_product_expire_label">Expire Date</string>
    <string name="productedit_creator_name_label">Creator Name</string>
    <string name="productedit_state_label">State</string>
    <string name="product_add_description_label">Description</string>
    <string name="product_add_save_button_title">Save</string>
    <string name="product_add_clear_button_title">Clear</string>
    <string name="productedit_delete_button_title">Delete</string>
    <string name="productedit_name_empty_error">Product name required</string>
    <string name="productedit_date_old_error">Expire date have passed</string>
    <string name="productedit_date_null_error">Expire date required</string>
    <string name="productedit_saved_toast">Saved</string>
    <string name="product_add_date_text_hint">dd.mm.yyyy</string>

    <string name="products_deleted_toast">Deleted</string>

    <string name="products_delete_alert_title">Are you sure</string>
    <string name="products_delete_alert_positive">Yes</string>
    <string name="products_delete_alert_negative">No</string>

    <string name="users_deleted_toast">Deleted</string>

    <string name="users_delete_alert_title">Are you sure</string>
    <string name="users_delete_alert_positive">Yes</string>
    <string name="users_delete_alert_negative">No</string>

    <string name="add_user_first_name_label">First Name</string>
    <string name="add_user_last_name_label">Last Name</string>
    <string name="add_user_role_label">Role</string>
    <string name="add_user_note_label">Notes</string>
    <string name="add_user_save_button_title">Save</string>
    <string name="add_user_clear_button_title">Clear</string>
    <string name="add_user_delete_button_title">Delete</string>
    <string name="add_user_first_name_empty_error">First name required</string>
    <string name="add_user_last_name_empty_error">Last Name required</string>
    <string name="add_user_role_empty_error">Role required</string>
    <string name="add_user_saved_toast">Saved</string>

    <string name="alert_title">&storename; Expire System</string>
    <string name="alert_content">You should check expired products</string>

    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="prompt_username">USER NAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>

    <string name="product_add_extra_alarm_label">Extra Alarm before </string>
    <string name="product_add_product_extra_alarm_spinner_prompt">add extra alarm before expire date</string>

    <string name="login_user_name_error">Enter user name</string>
    <string name="login_title">Login to &storename; expiry system</string>
    <string name="login_username_hint">User name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_btn_label">Click to Login</string>
    <string name="login_user_name_error_txt">Please Enter Your Username</string>
    <string name="login_user_not_exist_error">No such user exist</string>
    <string name="login_password_error_txt">Please Enter Your Password</string>
    <string name="add_user_edit_my_profile_checkbox">Edit my profile</string>
    <string name="add_user_username_label">User Name</string>
    <string name="add_user_chang_password_checkbox">Change my password</string>
    <string name="add_user_cancel_button_title">Cancel</string>
    <string name="history_title">History</string>
    <string name="products_title">Products</string>
    <string name="users_title">Users</string>
    <string name="add_user_title">Add User</string>
    <string name="product_add_product_title">Add new Productِ</string>
    <string name="activity_settings_title">Settings</string>


    <string-array name="extra_alarm">
        <item>None</item>
        <item>One Day</item>
        <item>Three Days</item>
        <item>Ten Days</item>
        <item>Fifteen Days</item>
        <item>Twenty Days</item>
        <item>One Month</item>
        <item>One Month and half</item>
        <item>Two Months</item>
        <item>Three Months</item>
    </string-array>

    <string-array name="roles">
        <item>Admin</item>
        <item>User</item>
    </string-array>



    <!-- TODO: Remove or change this placeholder text -->

    <string name="notification_channal_name">Remove some old stuff from shelves</string>
    <string name="notification_channal_description">Notify for expire alarm</string>
    <string name="provalueduct_recycleview_extral_alarm_large_value_error">Please enter reasonable value</string>
    <string name="product_recyclerview_extra_alarm_in_the_past_error">Extra Alarm cant be more than</string>
    <string name="product_recyclerview_extra_alarm_in_the_past_error_days">days</string>

    <string name="settings_notification_group_title">Notifications</string>
    <string name="settings_notification_starthour_seekbar_title">Notification Start Hour</string>
    <string name="settings_notification_starthour_seekbar_summary">when to send notification</string>
    <string name="settings_notification_endhour_seekbar_title">Notification Stop Hour</string>
    <string name="settings_notification_endhour_seekbar_summary">when to stop sending notification</string>
    <string name="settings_notification_repetition_period_title">Notification Repetition Period</string>
    <string name="settings_notification_repetition_period_summary">Period of notification repeatition in hours</string>
    <string name="settings_ringtone_group_title">Ringer</string>
    <string name="settings_ringtone_ringer_on_off_switch_title">Ringer</string>
    <string name="settings_ringtone_ringer_on_off_switch_summary">Turn on/off ringer</string>
    <string name="settings_ringtone_ringtone_duration_seekbar_title">Ring Tone Playing Duration</string>
    <string name="settings_ringtone_ringtone_duration_seekbar_summary">Duration of ring tone in seconds</string>
    <string name="products_table_header_product_name">Product Name</string>
    <string name="products_table_header_expire_date">Expire Date</string>
    <string name="products_table_header_code">Code</string>
    <string name="products_table_header_extra_alarm">Extra Alarm</string>
    <string name="users_table_header_first_name">First name</string>
    <string name="users_table_header_last_name">Last name</string>
    <string name="users_table_header_role">Role</string>
    <string name="users_table_header_creation_date">Creation date</string>
    <string name="settings_user_authintication">User Authentication</string>
    <string name="settings_user_authentication_on_title">Ask for user credentials</string>
    <string name="settings_user_authentication_summary">User will not be asked to provide user name or password and can use system anonymously</string>
    <string name="settings_default_user_name">Default user</string>
    <string name="settings_default_user_first_name">Default</string>
    <string name="settings_default_user_last_name">User</string>


</resources>
