<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fragment_background_color"
        tools:context=".fragments.AddProductFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/product_add_product_title"
            android:layout_margin="16dp"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/divider4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/product_add_product_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_add_product_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/product_add_product_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/product_add_product_name_txt" />

        <EditText
            android:id="@+id/product_add_product_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_name_label" />


        <TextView
            android:id="@+id/product_add_product_code_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:text="@string/product_add_product_code_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_name_txt" />

        <EditText
            android:id="@+id/product_add_product_code__txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_code_label" />


        <TextView
            android:id="@+id/product_add_product_expire_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/product_add_product_expire_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/product_add_expire_date_txt"
            app:layout_constraintEnd_toStartOf="@+id/product_add_expire_date_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_code__txt"/>

        <EditText
            android:id="@+id/product_add_expire_date_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8sp"
            android:ems="10"
            android:hint="@string/product_add_date_text_hint"
            app:layout_constraintBottom_toTopOf="@+id/product_add_extra_alarm_label"
            app:layout_constraintEnd_toStartOf="@+id/product_add_set_date_img_btn"
            app:layout_constraintStart_toEndOf="@+id/product_add_product_expire_date_label"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_code__txt" />

        <ImageButton
            android:id="@+id/product_add_set_date_img_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8sp"
            android:src="@drawable/ic_alarm_add_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/product_add_extra_alarm_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_add_expire_date_txt"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_code__txt" />


        <TextView
            android:id="@+id/product_add_extra_alarm_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/product_add_extra_alarm_label"
            app:layout_constraintBottom_toTopOf="@+id/product_add_product_expire_date_label"
            app:layout_constraintEnd_toStartOf="@+id/product_add_extra_alarm_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_expire_date_label" />

        <Spinner
            android:id="@+id/product_add_extra_alarm_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8sp"
            android:prompt="@string/product_add_product_extra_alarm_spinner_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_add_extra_alarm_label"
            app:layout_constraintTop_toBottomOf="@+id/product_add_product_expire_date_label" />


        <TextView
            android:id="@+id/product_add_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/product_add_description_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_extra_alarm_label" />

        <EditText
            android:id="@+id/product_add_description_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8sp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_description_label" />


        <Button
            android:id="@+id/product_add_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/product_add_save_button_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/product_add_clear_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_add_description_txt" />


        <Button
            android:id="@+id/product_add_clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/product_add_clear_button_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_add_save_btn"
            app:layout_constraintTop_toBottomOf="@+id/product_add_description_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>